[gd_scene load_steps=10 format=3 uid="uid://b4h2jog6b336i"]

[ext_resource type="Texture2D" uid="uid://duth0ad1m54ud" path="res://assets/Space Stuff 2/Charecter creator/Base body 03.png" id="1_hwsnw"]
[ext_resource type="Script" uid="uid://dbv0dq6dlv67c" path="res://scripts/blacksmith.gd" id="1_xntkf"]
[ext_resource type="Texture2D" uid="uid://gb1uenenb36h" path="res://assets/Space Stuff 2/Charecter creator/Head 04.png" id="2_4nxq5"]
[ext_resource type="PackedScene" uid="uid://crahrlgwgfepd" path="res://scenes/shop.tscn" id="3_ho0ex"]
[ext_resource type="Texture2D" uid="uid://dirfgnu1wi5op" path="res://assets/Space Stuff 2/Charecter creator/Eye 01.png" id="3_puaei"]
[ext_resource type="Texture2D" uid="uid://bldkjs14l2j7h" path="res://assets/Space Stuff 2/Charecter creator/Nose 01.png" id="4_pbekb"]
[ext_resource type="Texture2D" uid="uid://nq8d2inbonpi" path="res://assets/Space Stuff 2/Charecter creator/Shirt 02.png" id="5_7mq7b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_efgmt"]
size = Vector2(175, 286)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xntkf"]
size = Vector2(529, 320)

[node name="Blacksmith" type="StaticBody2D"]

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.85, 0, 0.779167, 1)
scale = Vector2(6, 6)
skew = 0.0122173
texture = ExtResource("1_hwsnw")

[node name="Sprite2D2" type="Sprite2D" parent="."]
modulate = Color(0.85, 0, 0.779167, 1)
scale = Vector2(6, 6)
skew = 0.0122173
texture = ExtResource("2_4nxq5")

[node name="Sprite2D3" type="Sprite2D" parent="."]
modulate = Color(4.81307e-07, 0.571037, 0.700208, 1)
scale = Vector2(6, 6)
skew = 0.0122173
texture = ExtResource("3_puaei")

[node name="Sprite2D4" type="Sprite2D" parent="."]
modulate = Color(4.81307e-07, 0.571037, 0.700208, 1)
scale = Vector2(6, 6)
skew = 0.0122173
texture = ExtResource("4_pbekb")

[node name="Sprite2D5" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
scale = Vector2(6, 6)
skew = 0.0122173
texture = ExtResource("5_7mq7b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-3.5, -15)
shape = SubResource("RectangleShape2D_efgmt")

[node name="ShopArea" type="Area2D" parent="."]
script = ExtResource("1_xntkf")
shop_path = NodePath("../Shop")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShopArea"]
visible = false
position = Vector2(18.5, -25)
shape = SubResource("RectangleShape2D_xntkf")

[node name="Shop" parent="." instance=ExtResource("3_ho0ex")]

[connection signal="body_entered" from="ShopArea" to="ShopArea" method="_on_body_entered"]
[connection signal="body_exited" from="ShopArea" to="ShopArea" method="_on_body_exited"]
